# license-mate

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  server.py
.github/: README.md
.github/workflows/: docker.yml
docker/: README.md  dev-mount.Dockerfile  dev-static.Dockerfile  prod.Dockerfile  readme.md
docker/builds/: README.md  dev-mount.Dockerfile  dev-static.Dockerfile  dev-static.Dockerfile.dockerignore  prod.Dockerfile  readme.md
docker/cloud-MongoDB/: dev-mount.yml  dev-static.yml  prod.yml
docker/local-MongoDB/: dev-mount.yml  dev-static.yml  prod.yml
server/: README.md  config.yml  database.py  main.py  pyproject.toml
server-ui/: README.md  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
server-ui/public/: index.html
server-ui/src/: Api.js  App.js  index.js
server-ui/src/components/: Table.jsx  Toast.jsx  TopBar.jsx
server-ui/src/views/: LoggedIn.js  NotLoggedIn.js
server/static/: docs.json  docs.yaml
server/static/css/: docs.css  style.css
server/templates/: database.html  docs.html  server-ui.html
workflows/: docker.yml
